[Spring 지하철 노선도 관리 - 3단계] 수리(이다원) 미션 제출합니다. (#148)
* feat: 지하철 노선 추가 API 수정

두 종점간의 연결 정보를 이용하여 노선 추가 시 구간 정보도 함께 등록

* feat : 노선 조회 시 구간에 포함된 역 목록 응답

노선에 포함된 구간 정보를 통해 상행 종점부터 하행 종점까지 역목록응 응답

* test: Line Test 정리

* refactor: 라인 수정 noContent 상태 코드로 변경

* docs: step3 기능 요구사항 추가

* feat: 구간 추가 예외 처리 - 기존 역 사이 길이보다 크거나 같을 때

* feat: 구간 추가 예외 처리 - 상행역과 하행역이 이미 노선에 모두 등록되어 있다면 추가할 수 없음

* refactor: 노선 중복 체크 수정

* feat: 구간 추가 예외 처리 -  상행역과 하행역 둘 중 하나도 포함 되어있지 않으면 추가할 수 없음

* feat: 구간 추가 구현

새로 등록할 구간의 상행역과 하행역 중 노선에 이미 등록되어있는 역을 기준으로 새로운 구간을 추가한다.

* feat: 구간 추가 - 갈래길 처리

* test: 구간 추가 테스트 수정

* docs: 구간 추가 README 반영

* feat: 구간 종점 제거 구현

* feat: 지하철 중간 구간 제거 구현

* feat: 구간 추가 예외 처리 

구간이 하나인 노선에서 마지막 구간 제거 불가능

* refactor: 불필요한 출력문 제거

* refactor: up,down으로 stationId 가지고 있을 경우 수정

* refactor: station hashcode, equals id로만 재정의

* refactor: 코드 정리

* refactor: 불필요한 메소드 제거

* refactor: updated section Section 도메인에서 리턴 하도록 수정

* refactor: Optional 적용

* refactor: 라인 이름이 DB에 있는지 먼저 검사하도록 변경

* refactor: station findByIds() 추가

* refactor: sections List 구현체로 변경

* refactor: LineController LineNotFound Exception 등록

* refactor: 데이터 추가, 변경 삭제 @Transactional 처리

* refactor: sections를 꺼내지 않고 Line에서 처리하도록 수정

* refactor: controller에서 service만 의존 하도록 변경

* test: controller test code 정리

* test: 도메인 테스트 추가

* refactor: 불필요한 임포트 제거

* test: 노선 이름 중복 체크 테스트 수정